<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple"
        />



    <TextView
        android:id="@+id/TextView_Inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/vamos_come_ar"
        android:textColor="@color/white"
        android:textSize="32sp"
        />

    <EditText
        android:id="@+id/EditText_Nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_centerVertical="true"
        android:hint="@string/qual_o_seu_nome"
        android:gravity="center"
        android:textColorHint="@color/white"
        android:textSize="28sp"
        android:textColor="@color/white"
        tools:ignore="Autofill,TextFields" />


    <Button
        android:id="@+id/Button_Salvar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/salvar"
        android:backgroundTint="@color/light_purple"
        />

</RelativeLayout>