<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/Menu"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/orange"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />
    
    <ImageView
        android:id="@+id/Image_Infinite"
        android:src="@drawable/infinite"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignTop="@+id/Menu"
        android:layout_alignBottom="@+id/Menu"
        android:layout_marginStart="32dp"
        app:tint="@color/white"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/Image_Emote"
        android:src="@drawable/emote"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignTop="@+id/Menu"
        android:layout_alignBottom="@+id/Menu"
        android:layout_centerHorizontal="true"
         app:tint="@color/white"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/Image_Sunny"
        android:src="@drawable/sunny"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignTop="@+id/Menu"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/Menu"
        android:layout_marginEnd="32dp"
        app:tint="@color/white"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/TextView_User"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ol_kotlin"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Menu"
        android:layout_marginTop="32dp"
        />

    <TextView
        android:id="@+id/TextView_Frase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/riscos_devem_ser_corridos_porque_o_maior_perigo_n_o_arriscarmos_nada"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_margin="16dp"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <View
        android:id="@+id/View_Linha"
        android:layout_width="128dp"
        android:layout_height="4dp"
        android:background="@color/orange"
        android:layout_below="@+id/TextView_Frase"
        android:layout_centerHorizontal="true"

        />
    
    <Button
        android:id="@+id/Button_NovaFrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/nova_frase"
        android:backgroundTint="@color/orange"
        />
    
</RelativeLayout>